--- a/sobre.css
+++ b/sobre.css
@@ -1,3 +1,19 @@
+.divdobotaovoltar {
+  display: flex;
+  justify-content: left;
+  text-align: left;
+  margin-left: 34px;
+}
+
+.botaovoltar {
+
+
+}
+
+.botaovoltar:hover {
+  text-decoration: underline;
+}
+
 /* RESET GERAL */
 * {
   margin: 0;
@@ -49,8 +65,6 @@ footer {
 }
 
 .navegacao {
-  display: flex;
-  justify-content: space-around;
   gap: 40px;
   margin-top: 10px;
   margin-bottom: 15px;
