--- a/sobre.css
+++ b/sobre.css
@@ -1,19 +1,3 @@
-.divdobotaovoltar {
-  display: flex;
-  justify-content: left;
-  text-align: left;
-  margin-left: 34px;
-}
-
-.botaovoltar {
-
-
-}
-
-.botaovoltar:hover {
-  text-decoration: underline;
-}
-
 /* RESET GERAL */
 * {
   margin: 0;
@@ -65,33 +49,13 @@ footer {
 }
 
 .navegacao {
+  display: flex;
+  justify-content: space-around;
   gap: 40px;
   margin-top: 10px;
   margin-bottom: 15px;
   font-size: 20px;
   flex-wrap: wrap;
-}
-
-/* INPUT DE PESQUISA */
-.pesquisa input {
-  display: flex;
-  padding: 10px;
-  border: none;
-  border-radius: 10px;
-  font-size: 20px;
-  outline: none;
-  border: 3px solid rgba(0, 0, 0, 0.353);
-}
-
-/* I:logo de lupa*/
-.input-search {
-  padding: 10px 40px 10px 10px;
-  font-size: 16px;
-  border-radius: 5px;
-  background: url('https://cdn-icons-png.flaticon.com/512/622/622669.png') no-repeat right 10px center;
-  background-size: 20px 20px;
-  background-color: white;
-  cursor: text;
 }
 
 /* I: links de navegação */
@@ -104,6 +68,7 @@ footer {
 .a1:hover {
   text-decoration: underline;
 }
+
 /* K: LOGO */
 .logo {
   width: 120px;
@@ -117,129 +82,25 @@ footer {
 }
 
 /* BOTÃO DE ANÚNCIO */
-.botaoanuncio {
+.botaoconta {
   display: flex;
   padding: 10px;
-  border: none;
-  border-radius: 10px;
-  font-size: 30px;
-  background-color: orange;
-  color: white;
-  cursor: pointer;
-  transition: background-color 0.3s;
-}
-
-.botaoanuncio:hover {
-  background-color: white;
-  color: orange;
-}
-
-.divdobotao {
-  margin-left: auto;
-  text-align: right;
-}
-
-.divdobotaosugerir {
-  display: flex;
-  flex-direction: row;
-  text-align: left;
-}
-
-.botaosugerir{
-  display: flex;
-  padding: 10px;
-  border: none;
+  border: 2px solid orange;
   border-radius: 10px;
   font-size: 22.5px;
-  margin-top: 2px;
-  background-color: orange;
+  background-color: transparent;
   color: white;
   cursor: pointer;
-  transition: background-color 0.3s;
+  transition: 0.5s;
 }
 
-.botaosugerir:hover {
-  background-color: white;
-  color: orange;
-}
-
-.cards{
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  flex-wrap: wrap;
-}
-
-.card{
-  width: 250px;
-  height: 350px;
-  
-  margin-top: 35px;
-  margin-bottom: 35px;
-  margin-right: 30px;
-  margin-left: 30px;
-  text-align: center;
-  background-color: rgb(255, 255, 255);
-  box-shadow: 20px 20px 20px gray;
-  border-radius: 10px 10px 10px 10px;
-  border: 2px solid black;
-  transition: transform 0.5s ease-in-out;
-}
-
-.card:hover{
+.botaoconta:hover {
   transform: scale(1.05);
-  
 }
 
-.cardimagem img{
-  width: 160px;
-  height: 160px;
-  margin-top: 10px;
-  border: none;
-  border-radius: 5px 5px 5px 5px;
-  background-size: cover;
-}
-
-.cardstext{
-  margin-top: 10px;
-}
-
-.cardtitulo{
-  font-weight: bold;
-  font-size: xx-large;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  margin-left: 8px;
-  margin-right: 5px;
-}
-
-.carddescricao{
-  font-size: small;
-  margin-top: 15px;
-  margin-bottom: 15px;
-  margin-left: 8px;
-  margin-right: 5px;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
-.sabermais{
-  background-color: orange;
-  color: white;
-  border: 2px solid black;
-  border-radius: 10px 10px 10px 10px;
-  width: 100px;
-  padding: 10px;
-  margin: 10px;
-  transition: ease 100ms;
-  cursor: pointer;
-}
-
-.sabermais:hover{
-  background-color: rgb(255, 192, 75);
-  color: black;
+.divdobotaoconta {
+  margin-left: auto;
+  text-align: right;
 }
 
 .textoinfor{
@@ -255,11 +116,14 @@ footer {
 }
 
 .contato{
-  margin-left: 40px;
+  margin-left: 59px;
 }
 
+.contatoemail {
+  color: orange;
+}
 
-.trecos{
+.logos{
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -267,7 +131,7 @@ footer {
 }
 
 .redessociais{
-  margin-left: 20px;
+  margin-left: 53px;
   display: flex;
   flex-direction: row;
   text-align: left;
@@ -332,72 +196,6 @@ footer {
   color: white;
 }
 */
-
-/* Sugestão botão
-
-.inputproduto{
-  width: 190px;
-  border-radius: 5px 5px 5px 5px;
-  outline: none;
-  border: 2px solid black;
-  margin-top: 5px;
-  margin-bottom: 10px;
-  padding: 3px;
-  background-color: white;
-}
-
-.textossugestao{
-  margin-left: 10px;
-  margin-top: 10px;
-}
-
-.sugestao{
-  position: static;
-  display: flex;
-  flex-direction: column;
-  justify-items: center;
-  align-items: left;
-  width: 400px;
-  height: 300px;
-  border-radius: 10px 10px 10px 10px;
-  border: 2px solid black;
-  box-shadow: 5px 5px rgba(0, 0, 0, 0.268);
-  background-color: white;
-  color: black;
-  font-size: 13px;
-  font-family: 'Roboto', sans-serif;
-  z-index: 1;
-}
-
-.botaosugestao{
-  display: flex;
-  justify-content: center;
-}
-
-.confirmarsugestao{
-  background-color: white;
-  color: black;
-  margin-top: 20px;
-  width: 100px;
-  border-radius: 5px 5px;
-  padding: 10px;
-  border: 2px solid black;
-  transition: 0.5s ease;
-  cursor: pointer;
-}
-
-.confirmarsugestao:hover{
-  background-color: black;
-  color: white;
-}
-
-.contentsugestao{
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 1;
-} */
 
 /* MEDIA QUERY RESPONSIVA */
 @media (max-width: 768px) {
