--- a/produto.css
+++ b/produto.css
@@ -8,6 +8,7 @@
 html, body {
   height: 100%;
   font-family: 'Roboto', 'Arial', sans-serif;
+  color: #112B4D;
 }
 
 /* ESTRUTURA FLEXÍVEL */
@@ -26,14 +27,14 @@ main {
 }
 
 header {
-  background-color: #0D1B2A;
+  background-color: #112B4D;
   padding: 20px;
   border-radius: 0px 0px 15px 15px;
 }
 
 /* FOOTER RESPONSIVO */
 footer {
-  background-color: #0D1B2A;
+  background-color: #112B4D;
   padding: 20px;
   color: white;
   text-align: center;
