--- a/style.css
+++ b/style.css
@@ -18,19 +18,19 @@ body {
 
 main {
   flex: 1;
-  background-color: beige;
+  background-color: white;
   padding: 30px;
 }
 
 header {
-  background-color: #0D1B2A;
+  background-color: #112B4D;
   padding: 20px;
   border-radius: 0px 0px 15px 15px;
 }
 
 /* FOOTER RESPONSIVO */
 footer {
-  background-color: #0D1B2A;
+  background-color: #112B4D;
   padding: 20px;
   color: white;
   text-align: center;
