--- a/produto.css
+++ b/produto.css
@@ -8,7 +8,6 @@
 html, body {
   height: 100%;
   font-family: 'Roboto', 'Arial', sans-serif;
-  color: #112B4D;
 }
 
 /* ESTRUTURA FLEXÍVEL */
@@ -19,11 +18,36 @@ body {
 
 main {
   flex: 1;
-  background-color: white;
-  /* background-image: url(logotipo.png);
+  background-color: transparent;
+}
+
+.fundo{
+  filter: blur(8px);
+  position: fixed;
+  z-index: -2;
+  width: 60%;
+  height: 70%;
+  top: 55%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-image: url(logotipo.png);
   background-repeat: no-repeat;
-  background-size: 70% 100%;
-  background-position: center; */
+  background-size: contain;
+  background-position: center;
+}
+
+.camadaescura{
+  position: fixed;
+  z-index: -1;
+  width: 100%;
+  height: 120%;
+  top: 60%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #0d1b2ab2;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 
 header {
@@ -39,6 +63,7 @@ footer {
   color: white;
   text-align: center;
   border-radius: 15px 15px 0px 0px;
+  font-weight: bold;
 }
 
 /* TOPO */
@@ -130,6 +155,7 @@ footer {
   margin-bottom: 15px;
   font-size: 20px;
   flex-wrap: wrap;
+  font-weight: bold;
 }
 
 .botaosugerir:hover {
@@ -146,18 +172,19 @@ footer {
 
 .card{
   width: 250px;
-  max-height: 390px;
+  max-height: 400px;
   margin-top: 35px;
   margin-bottom: 35px;
-  margin-right: 30px;
-  margin-left: 30px;
+  margin-right: 25px;
+  margin-left: 25px;
   text-align: center;
-  background-color: #Ffffff;
-  box-shadow: 20px 20px 20px rgba(0, 0, 0, 0.1);
-  border-radius: 10px 10px 10px 10px;
-  border: 2px solid black;
+  background-color: #143354;
+  box-shadow: 20px 20px 20px rgba(0, 0, 0, 0.289);
+  border-radius: 15px 15px 15px 15px;
+  border: 2px solid orange;
   transition: transform 0.5s ease-in-out;
   padding-bottom: 20px;
+  color: white;
 }
 
 .card:hover{
@@ -169,7 +196,7 @@ footer {
   width: 160px;
   height: 160px;
   margin-top: 10px;
-  border: 2px solid black;
+  border: 2px solid orange;
   border-radius: 5px 5px 5px 5px;
   background-size: cover;
 }
@@ -178,19 +205,27 @@ footer {
   margin-top: 10px;
 }
 
-.cardtitulo{
+.card .cardtitulo{
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
   font-weight: bold;
   font-size: larger;
-  white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
   margin-left: 8px;
-  margin-right: 5px;
+  margin-right: 15px;
+}
+
+.card.expanded .cardtitulo{
+  -webkit-line-clamp: unset;
 }
 
 .cardpreco{
-  margin-top: 3px;
+  margin-top: 8px;
   font-size: larger;
+  color: gold;
+  font-weight: bold;
 }
 
 .card .carddescricao{
