--- a/sobre.css
+++ b/sobre.css
@@ -18,24 +18,56 @@ body {
 
 main {
   flex: 1;
-  background-color: white;
+  background-color: transparent;
+  color: white;
   padding: 30px;
 }
 
-header {
-  background-color: #112B4D;
-  padding: 20px;
-  border-radius: 0px 0px 15px 15px;
+.fundo{
+  filter: blur(8px);
+  position: fixed;
+  z-index: -2;
+  width: 60%;
+  height: 70%;
+  top: 55%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-image: url(logotipo.png);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
 }
 
-/* FOOTER RESPONSIVO */
+.camadaescura{
+  position: fixed;
+  z-index: -1;
+  width: 100%;
+  height: 120%;
+  top: 60%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #0d1b2ab2;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+header {
+  background-color: #05203d;
+  padding: 20px;
+  border-radius: 0px 0px 15px 15px;
+  font-weight: bold;
+}
+
 footer {
-  background-color: #112B4D;
+  background-color: #05203d;
   padding: 20px;
   color: white;
   text-align: center;
   border-radius: 15px 15px 0px 0px;
+  font-weight: bold;
 }
+
 
 .sobre-nos {
   display: flex;
@@ -60,7 +92,6 @@ footer {
   margin-top: 30px;
 }
 
-
 .valores {
   display: flex;
   flex-direction: column;
@@ -81,7 +112,6 @@ footer {
   margin: 0 auto;
 }
 
-/* K: TOPO */
 .cabecario {
   display: flex;
   align-items: center;
@@ -97,6 +127,7 @@ footer {
   margin-bottom: 15px;
   font-size: 20px;
   flex-wrap: wrap;
+  font-weight: bold;
 }
 
 /* I: links de navegação */
@@ -109,6 +140,7 @@ footer {
 .a1:hover {
   text-decoration: underline;
 }
+
 /* K: LOGO */
 .logo {
   width: 120px;
@@ -158,13 +190,19 @@ footer {
   gap: 5px;
 }
 
-/* K: MEDIA QUERY RESPONSIVA */
-@media (max-width: 768px) {
-  .cabecario,
-  .navegacao {
+/* KI: MEDIA QUERY RESPONSIVA */
+@media (max-width: 750px) {
+  .cabecario{
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     gap: 10px;
+  }
+
+  .navegacao{
+    margin-top: 15px;
+    flex-direction: row;
+    justify-content: space-around;
   }
 
   .navegacao {
@@ -177,6 +215,7 @@ footer {
   .botaoanuncio {
     font-size: 18px;
     width: 90%;
+    margin-left: 10px;
   }
 
   .logo {
