--- a/style.css
+++ b/style.css
@@ -18,14 +18,45 @@ body {
 
 main {
   flex: 1;
-  background-color: white;
+  background-color: transparent;
   padding: 30px;
+  color: white;
+}
+
+.fundo{
+  filter: blur(8px);
+  position: fixed;
+  z-index: -2;
+  width: 60%;
+  height: 70%;
+  top: 55%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-image: url(logotipo.png);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+}
+
+.camadaescura{
+  position: fixed;
+  z-index: -1;
+  width: 100%;
+  height: 120%;
+  top: 60%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #0d1b2ab2;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 
 header {
   background-color: #112B4D;
   padding: 20px;
   border-radius: 0px 0px 15px 15px;
+  font-weight: bold;
 }
 
 /* FOOTER RESPONSIVO */
@@ -35,6 +66,7 @@ footer {
   color: white;
   text-align: center;
   border-radius: 15px 15px 0px 0px;
+  font-weight: bold;
 }
 
 .destaque {
